--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
     "next": "10.2.0",
